force-app/main/default/objects/Historique_Etat_Mode__c/Historique_Etat_Mode__c.object-meta.xml
<CustomObject>
    <description>Cet objet technique sert à historiser les modifications des états et des modes réalisés sur l&#39;objet Account (PUDO).</description>
    <label>Historique Etat/Mode</label>
    <nameField>
        <displayFormat>HEM-{0000}</displayFormat>
        <label>Numéro d&#39;historique Etat/Mode</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Historiques Etats/Modes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>