force-app/main/default/objects/Historique_Etat_Mode__c/fields/Compte__c.field-meta.xml
<CustomField>
    <fullName>Compte__c</fullName>
    <label>Compte</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Cycle de vie du relais</relationshipLabel>
    <relationshipName>Historiques_Etats_Modes</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>