force-app/main/default/objects/Historique_Etat_Mode__c/fields/Creerpar__c.field-meta.xml
<CustomField>
    <fullName>Creerpar__c</fullName>
    <label>Créer par</label>
    <length>50</length>
    <type>Text</type>
</CustomField>