force-app/main/default/objects/Historique_Etat_Mode__c/fields/Datedecreation__c.field-meta.xml
<CustomField>
    <fullName>Datedecreation__c</fullName>
    <label>Date de création</label>
    <type>DateTime</type>
</CustomField>