force-app/main/default/objects/Historique_Etat_Mode__c/fields/Etat__c.field-meta.xml
<CustomField>
    <fullName>Etat__c</fullName>
    <label>Etat</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>LOV_GLO_ETA</valueSetName>
    </valueSet>
</CustomField>