force-app/main/default/objects/Historique_Etat_Mode__c/fields/Tech_Age_Mode__c.field-meta.xml
<CustomField>
    <fullName>Tech_Age_Mode__c</fullName>
    <description>Différence en jours entre la date de changement d&#39;état/Mode et aujourd&#39;hui.</description>
    <formula>Today()- DATEVALUE (Datedecreation__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>